# lapack_test

./: CMakeLists.txt  README.md  foo.cc  foo.cpp  lapacke_example_aux.h
lapack/: CMakeLists.txt
test/: CMakeLists.txt  FooTest.cpp
