PROJECT(gsl_test Fortran C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CBLAS ON)
SET(LAPACKE ON)
ADD_SUBDIRECTORY(lapack)

enable_testing()
ADD_SUBDIRECTORY(test)

include_directories(${LAPACK_BINARY_DIR}/include)

ADD_EXECUTABLE(foo foo.cpp lapacke_example_aux.c)
TARGET_LINK_LIBRARIES(foo lapacke cblas ${BLAS_LIBRARIES})
